5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1578_1329.log
== SUBMITION (2019-03-11 21:55:43) 
-- CODE:
Print(180/4)
-- EXECUTION TIME:
0.197559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    Print(180/4)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:56:36) 
-- CODE:
Print (180/4)
-- EXECUTION TIME:
0.192567
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    Print (180/4)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:56:47) 
-- CODE:
Print (180*4)
-- EXECUTION TIME:
0.19337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    Print (180*4)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:57:43) 
-- CODE:
Print (4.5)
-- EXECUTION TIME:
0.141743
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    Print (4.5)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:57:49) 
-- CODE:
Print (4.5)
-- EXECUTION TIME:
0.151728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    Print (4.5)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:02:22) 
-- CODE:
print("mutiplicação: ",4*2)
-- EXECUTION TIME:
0.20318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    print("mutiplica\xe7\xe3o: ",4*2)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 9-10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:02:45) 
-- CODE:
print("mutiplicação:",4*2)
-- EXECUTION TIME:
0.230132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    print("mutiplica\xe7\xe3o:",4*2)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 9-10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:02:59) 
-- CODE:
print("mutiplicação:"4*2)
-- EXECUTION TIME:
0.170837
-- ERROR:
  File "/home/codebench/codes/1578/1329/main.py", line 1
    print("mutiplica\xe7\xe3o:"4*2)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:03:13) 
-- CODE:
print(4*2)
-- EXECUTION TIME:
0.208824
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:04:11) 
-- CODE:
print(180/2)
-- EXECUTION TIME:
0.140934
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
90.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:04:36) 
-- CODE:
print("divisão: ",180/2)
-- EXECUTION TIME:
0.22863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    print("divis\xe3o: ",180/2)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 5: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:04:47) 
-- CODE:
print("divisão: ",180/4)
-- EXECUTION TIME:
0.136273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    print("divis\xe3o: ",180/4)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 5: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:04:50) 
-- CODE:
print("divisão: ",180/4)
-- EXECUTION TIME:
0.134984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1329/main.py", line 1, in <module>
    print("divis\xe3o: ",180/4)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 5: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:04:57) 
-- CODE:
print(180/4)
-- EXECUTION TIME:
0.140621
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
